# Nuclear_Transport_With_ML

./: .gitignore  .gitmodules  README.md  csv_to_hdf5.py  datagen.sh  environment.yml  pyproject.toml  requirements.txt  setup.sh  submit_gpu_job.sh  test.py  zoom_datagen.sh
.github/workflows/: test.yaml
ML/: HowToUse.md  __init__.py  base_simple_U235.yaml  dataset_helper.py  gpu_job_runner.py  inspect_data.ipynb  machine_learning.ipynb  main.py  main_config.yaml  metrics.py  model.py  optuna_optimizer.py  plot.py  sql_lite_logger.py  sweep_train.py  sweep_train_single.py  sweeper.py  test_config.yaml  visualize_optuna_results.py
ML/data/: test_small_dataset.csv
ML/datamodule/: DNN_Datamodule.py  data_scalers.py  dataset_helper.py  dnn_datamodule.py  neural_ode_datamodule.py
ML/logs/: job_8919255.err  job_8919398.err  job_8926293.err
ML/models/: DNN_Model.py  ModelArchitectures.py  dnn_model.py  model_architectures.py  model_helper.py  modes.py  neural_ode.py
ML/notebooks/: machine_learning.ipynb
ML/parameter_tuners/: base_simple_chain.yaml  inspect_tuner_results.ipynb  optuna_optimizer.py  (+2 more)
data_generation/: data_beavers.txt  datagen.py  example_power_history.csv  quarter_datagen.py  quarter_sim.py  reactor_sim.py  zoom_datagen.py
test/: pinModelDepletion_Test.py  pinModel_Test.py  variableDepletion.py
tests/: pinModelDepletion_Test.py  pinModel_Test.py  test.py  variableDepletion.py
util/: clean_data.py  combine_data.py  compare_data.py  decay_level_test.py  examine_xml_files.py  inspect_decay_chains.py  plot_helper.py  reduce_decay_chains.py
(+14 files in other folders)
